--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "64e55fb5-fece-45e4-9f07-6b725a6cb483"
 authors = ["Anshul Singhvi"]
 version = "0.1.0"
 
+[deps]
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
+
 [compat]
 julia = "1.2"
 
